--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ button {
 /* ==== HEADER ==== */
 .header {
   height: var(--fixed-header-height);
-  padding: 0 1.7rem;
+  padding: 0 1.5rem;
 }
 
 /* ==== NAV ==== */
@@ -83,7 +83,7 @@ button {
   align-items: center;
 }
 .nav_menu_list .nav_menu_item {
-  margin: 0 2rem;
+  margin: 0 1rem;
 }
 .nav_menu_item .nav_menu_link {
   font-size: 20px;
@@ -250,11 +250,23 @@ button {
   line-height: 25px;
   font-size: 15.5px;
 }
+
 footer {
-  width: 100%;
-  background-color: var(--primary-color);
-  height: 12px;
   margin-top: 8rem;
+  background-color: black;
+  width: 100%;
+}
+
+.footer {
+  /* width: 100%; */
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  max-width: 1048px;
+  margin: auto;
+  padding: 0 2rem;
+  min-height: 150px;
+  align-items: center;
 }
 
 .quarterDiv {
@@ -369,12 +381,12 @@ footer {
   line-height: 1.5rem;
 }
 
-footer {
+/* footer {
   width: 100%;
   background-color: var(--primary-color);
   height: 12px;
   margin-top: 8rem;
-}
+} */
 
 /* ==== MEDIA QURIES FOR RESPONSIVE DESIGN ==== */
 @media screen and (min-width: 768px) {
