--- a/css/style.css
+++ b/css/style.css
@@ -62,15 +62,27 @@ button {
 .header {
   height: var(--fixed-header-height);
   padding: 0 1.5rem;
+  width: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  position: fixed;
+  z-index: 1;
+  /* margin-bottom: 5rem; */
+  top: 0;
+  border-bottom: 1px black solid;
 }
-
 /* ==== NAV ==== */
 .nav {
-  width: 100%;
+  max-width: 1040px;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 auto;
 }
 /* ==== LOGO ==== */
 .logo h2 {
@@ -117,6 +129,7 @@ button {
   margin-bottom: 5rem;
 }
 .grid-cols-2 {
+  margin-top: 4rem;
   width: 100%;
   height: 100%;
   display: grid;
