--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,8 @@ body {
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
-  color: #fff;
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  color: black;
+  background-color: #fde9ea;
 }
 ul li {
   list-style-type: none;
@@ -63,18 +58,15 @@ button {
   height: var(--fixed-header-height);
   padding: 0 1.5rem;
   width: 100%;
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  background-color: #fde9ea;
   position: fixed;
   z-index: 1;
   /* margin-bottom: 5rem; */
   top: 0;
   border-bottom: 1px black solid;
+  box-shadow: 0 2rem 1.5rem rgba(22, 28, 45, 0.1);
 }
+
 /* ==== NAV ==== */
 .nav {
   max-width: 1040px;
@@ -87,7 +79,7 @@ button {
 /* ==== LOGO ==== */
 .logo h2 {
   font-size: 26px;
-  color: #fff;
+  color: #000;
 }
 /* ====  NAV-MENU  ==== */
 .nav_menu_list {
@@ -100,19 +92,19 @@ button {
 .nav_menu_item .nav_menu_link {
   font-size: 16px;
   line-height: 27px;
-  color: #fff;
+  color: #000;
   text-transform: capitalize;
   letter-spacing: 0.5px;
   display: block;
   padding: 1.3px;
 }
 .nav_menu_link:hover {
-  color: lightgray;
+  color: #000;
 }
 .toggle_btn {
   font-size: 20px;
   font-weight: 600;
-  color: #fff;
+  color: #000;
   z-index: 4;
 }
 .nav_menu,
@@ -156,13 +148,13 @@ button {
 }
 
 .main-heading span {
-  color: #fff;
+  color: #000;
 }
 .info-text {
   margin-top: 1.5rem;
   font-size: 16px;
   line-height: 16px;
-  color: #fff;
+  color: #000;
   font-weight: 200;
 }
 .btn_wrapper {
@@ -212,12 +204,11 @@ button {
   font-weight: 500;
   color: #fff;
   letter-spacing: 0;
-  background-color: #e1e7fc;
-  color: #0e2a86;
+  background-color: #000;
   box-shadow: 0 0.5rem 1.5rem rgba(22, 28, 45, 0.1);
 }
 .documentation_btn:hover {
-  background-color: #d7ddf1;
+  background-color: #000;
   transition: box-shadow 0.25s ease, transform 0.25s ease;
 }
 .grid-item-2 {
@@ -276,8 +267,10 @@ button {
 }
 
 footer {
+  box-shadow: ;
+  border-top: 1px solid black;
   margin-top: 8rem;
-  background-color: black;
+  background-color: #fde9ea;
   width: 100%;
 }
 
