css error handled

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ button {
 .roadmapdivs {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around`;
+  justify-content: space-around;
 }
 /* .quarterDiv {
   min-width: 40%;
